test/expected/explain_hc.out
explain short char x
              ^
15: error: "short char" is illegal for built-in type
